Adds the Summary Script to Backend

--- a/backend/Playground/TranscriptAPI/transcriptToSummary.ipynb
+++ b/backend/Playground/TranscriptAPI/transcriptToSummary.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
        "'JNL6f1xkie4'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
        "  'duration': 2.409}]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -121,14 +121,10 @@
      "output_type": "stream",
      "text": [
       "No model was supplied, defaulted to t5-small (https://huggingface.co/t5-small)\n",
-      "Downloading: 100%|██████████| 1.17k/1.17k [00:00<00:00, 182kB/s]\n",
-      "Downloading: 100%|██████████| 231M/231M [00:21<00:00, 11.1MB/s]\n",
       "All model checkpoint layers were used when initializing TFT5ForConditionalGeneration.\n",
       "\n",
       "All the layers of TFT5ForConditionalGeneration were initialized from the model checkpoint at t5-small.\n",
-      "If your task is similar to the task the model of the checkpoint was trained on, you can already use TFT5ForConditionalGeneration for predictions without further training.\n",
-      "Downloading: 100%|██████████| 773k/773k [00:00<00:00, 2.28MB/s]\n",
-      "Downloading: 100%|██████████| 1.32M/1.32M [00:00<00:00, 2.81MB/s]\n"
+      "If your task is similar to the task the model of the checkpoint was trained on, you can already use TFT5ForConditionalGeneration for predictions without further training.\n"
      ]
     }
    ],
@@ -138,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +188,7 @@
        "'[\"the key takeaway I hope you have after this video is to give ourselves a framework for thinking about the rent versus buy decision for a home . let\\'s say this house in on the market, and it\\'s on market for rental at 1,500 a month, which is the same thing as 18,000 a year .\", \\'a traditional mortgage, one that has a fixed term, may be a 15 year fixed mortgage . some of it goes towards the loan and some go down to pay down the loan . early on, it might be disproportionately interest, and early on might be 1,500 a month in interest .\\', \"this would be a traditional process of a conventional mortgage . let\\'s assume that you\\'re taking an interest-only loan . this is going to help just simplify things, and obviously we\\'d probably have to get a spread sheet out .\", \"your taxable income would go down to 82,000 . you\\'ll save, roughly, your tax rate as a percentage of this . 1% of 400,000 would be 4,000 in property tax .\", \\'4,000 + 2,000 is 6,000 + 12,000 is 18,000. 18,018 . 2,000 per year in upkeep, 2,000 a year in downkeep . the reason why I listed all these things is going out the door .\\', \"we don\\'t even talk about what we\\'re doing with our $100,000 . over here we had to use it for our down payment . we still have $100,000 invested, so we need to think about what\\'s going out the door .\", \"you\\'re 16,000 out-of-pocket. 16,000 cost per year . for this individual, purely on the economics, if we can assume these numbers, it actually might make sense to rent a house .\", \"there\\'s no clear-cut answer that renting is always better than buying . this is a back-of-the-envelope version; we\\'ll do a more in-depth version .\", \"the biggest reason we bought a house a few years ago is for buying stability . rents are unpredictable; rents could go up . if you\\'re in a really rapidly rental appreciating market, it\\'s unpredictable .\", \"you can customize, and make improvements when you buy a house . all the intangibles aren\\'t just on the buying side, they could also be on the rental side . if you\\'re just settling down in an area, you might not want to commit to one neighborhood or one house without understanding things better .\", \\'ht want to have the flexibility of renting . you get into a 6 month lease, 1 year lease . sometimes you have housing bubbles and sometimes these economics go way out of wack .\\']'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
